k8s/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: banking
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
